# scoping-tool-backend

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  dev-docker-compose.yml  docker-compose.yml  docker-start.sh  operations.txt
src/: environment.rs  events.rs  http_interface.rs  logger.rs  main.rs  redis_state_manager.rs  redis_state_manager_old.rs  state.rs  state_manager.rs  utils.rs
src/aggregators/: get_session_details.rs  mod.rs  session_result.rs
src/event_handlers/: end_session.rs  get_response_count.rs  get_session_details.rs  get_session_result.rs  mod.rs  start_new_session.rs  submit_response.rs
src/operations/: end_session.rs  get_response_count.rs  get_session_details.rs  get_session_result.rs  mod.rs  new_scoping_session.rs  start_scope.rs  submit_response.rs
src/redis_state_manager/: event_stream.rs  mod.rs  redis_state.rs  state_manager.rs
static/: index.html
