[package]
name = "scoping-tool-backend"
version = "0.1.0"
authors = ["Peter East <petereast@pm.me>"]

[dependencies]
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
actix = "0.7.4"
actix-web = "0.7.8"
uuid = {version = "0.7.1", features = ["v4"]}
futures = "0.1.25"
tokio = "0.1.11"
json = "0.11.13"
rand = "0.5.5"
redis = "0.9.1"

